UI/css/style.css
:root {
    /*
        SIZES
    */
    --header-height: 3.5rem;
    --three-pexels: .3rem;
    --ten-pexels: 1rem;
    --fifteen-pexels: 1.5rem;
    --hundred-percent: 100%;

    /*
        COLORS
    */
    --color-white: #ffffff;
    --color-white-2: #FEFEFF;
    --color-grey: #F8F5FD;
    --color-grey-2: #EDEDF1;
    --color-grey-3: #cccccf;
    --color-grey-4: #909092;
    --color-blue: #03A9F4;
    --color-blue-2: #2196F3;
    --color-blue-light: #29B6F6;
    --color-blue-light-2: #03A9F4;
    --color-green: #4CAF50;
    --color-green-2: #1B5E20;
    --color-red: #F44336;
    --color-red-2: #B71C1C;
    --color-orange: #FF9800;
    --color-orange-2: #EF6C00;
    --color-pink: #E91E63;
    --color-pink-2: #AD1457;
    --color-indigo: #3F51B5;
    --color-indigo-2: #283593;
    --color-black: #000;
    --sidebar-color-1: #404968;
    --sidebar-color-2: #2A2E43;
}

* {
    margin: 0;
    padding: 0;
}

body {
    font-size: 62.5%; /* 10px */
    font-family: 'Muli', sans-serif;
    overflow-x: hidden;
    box-sizing: border-box;
}

.body {
    overflow: hidden;
}

.wrapper {
    display: flex;
}


/*
    =============================
            SIDEBAR
    =============================
*/
.sidebar {
    flex: 0 0 16rem;
    min-height: 100vh;
    background-image: linear-gradient(to bottom, var(--sidebar-color-2), var(--sidebar-color-1));
    transition: margin-left .3s;
    display: flex;
    flex-direction: column;
}

.sidebar-hide {
    margin-left: -16rem;
}

.sidebar-header {
    display: flex;
    align-items: center;
    justify-content: center;
    height: var(--header-height);
    border-bottom: 1px solid #474747;
}

.sidebar-header .logo {
    font-size: 2rem;
    color: var(--color-white);
}

.sidebar-menu {
    margin-top: var(--ten-pexels);
    margin-bottom: auto;
}

.sidebar-item {
    position: relative;
}

.sidebar-item:not(:last-child) {
    margin-bottom: .5rem;
}

.sidebar-item::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 3px;
    border-left: 3px solid var(--color-blue);
    background-image: linear-gradient(to right, var(--sidebar-color-1), var(--sidebar-color-2));
    transform: scaleY(0);
    transition: transform .2s, width .4s cubic-bezier(1, 0, 0, 1) .2s, background-color .1s;
}

.sidebar-item:hover::before,
.sidebar-item-active::before {
    transform: scaleY(1);
    width: 98%;
}

.sidebar-item:active::before {
    background-color: var(--color-blue);
}

.sidebar-link:link,
.sidebar-link:visited {
    color: var(--color-grey-2);
    text-decoration: none;
    text-transform: uppercase;
    display: block;
    padding: var(--ten-pexels) 1.5rem;
    display: flex;
    font-size: .8rem;
    font-weight: 500;
    align-items: center;
    position: relative;
    z-index: 10;
}

/* &-icon {
    width: 1.75rem;
    height: 1.75rem;
    margin-right: 2rem;
    fill: currentColor;
} */

.sidebar-legal {
    font-size: .8rem;
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--color-grey);
    margin-bottom: .8rem;
}

/*
    =============================
            MAIN-CONTENT
    =============================
*/
.main-content {
    flex: 1;
    display: flex;
    flex-direction: column;
}


/*
    =============================
        MAIN-CONTENT HEADER
    =============================
*/
.header {
    display: flex;
    align-items: center;
    height: var(--header-height);
    background-color: var(--color-white-2);
}

.toggle-sidebar {
    background-color: var(--color-white-2);
    border: none;
    cursor: pointer;
    margin: 0 .5rem;
}

.toggle-sidebar:focus {
    outline: none;
}

.toggle-sidebar:active {
    transform: translateY(2px);
}

.toggle-sidebar-button {
    height: 2rem;
    width: 2rem;
    fill: var(--color-grey-4);
}


/*
    ==================================
        MAIN-CONTENT HEADER SEARCH
    ==================================
*/
.search-form {
    flex: 0 0 40%;
    display: flex;
    align-items: center;
    margin-right: auto;
}

.search-input {
    font-family: inherit;
    font-size: var(--ten-pexels);
    background-color: var(--color-grey);
    border: none;
    color: inherit;
    padding: .5rem var(--ten-pexels);
    width: 70%;
    transition: all .9s;
    margin-right: -2.5rem;
}

.search-input:focus {
    outline: none;
    width: var(--hundred-percent);
    background-color: var(--color-grey);
}

.search-form-button {
    border: none;
    background-color: transparent;
}

.search-form-button:focus {
    outline: none;
}

.search-form-button:active {
    transform: translateY(2px);
}

.search-form-icon {
    height: 2rem;
    width: 2rem;
    fill: var(--color-grey-4);
}


/*
    ====================================
        MAIN-CONTENT HEADER USER-NAV
    ====================================
*/
.header .user-nav {
    display: flex;
    align-items: center;
    align-self: stretch;
}

.header .user-nav > * {
    padding: 0 .7rem;
    cursor: pointer;
    height: var(--hundred-percent);
    display: flex;
    align-items: center;
}

.header .user-nav > *:hover {
    background-color: var(--color-grey-3);
}

.header .user-nav-icon-box {
    position: relative;
}

.header .user-nav-icon {
    height: var(--fifteen-pexels);
    width: var(--fifteen-pexels);
    fill: var(--color-grey-4);
}

.header .user-nav-notification {
    height: .5rem;
    width: .5rem;
    border-radius: var(--hundred-percent);
    background-color: var(--color-blue-2);
    position: absolute;
    top: .8rem;
    right: 1.2rem;
}

.header .user-nav-user-photo {
    height: 2.5rem;
    border-radius: 50%;
    margin-right: .5rem;
}

.header .user-nav-user {
    position: relative;
}
/* ... */

